users/show - form

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 
 <%# button %>
 <h3>Create an Account</h3>
-<form method="get" action="/users/signup">
+<form method="get" action="/users/new">
   <input type="submit" value="Create an Account">
 </form>
 <h3>Or Please Login</h3>
