--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,2 @@
 <h1>This is the show page for an individual instance of your model.</h1>
+Here you will show the information about the User as well as the todos associated with the user
