--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,6 @@
-<h1>Insert the form to edit an instance of your model here.</h1>
+<h1>Login</h1>
+<form action="/users/login"  method="post">
+  <p>Username: <input type="text" name="username" id="user[username]" value="username"></p>
+  <p>Password: <input type="password" name="password" id="user[password]" value="password"></p>
+  <input type="submit" value="submit">
+</form>
