--- a/app/views/todos/new.erb
+++ b/app/views/todos/new.erb
@@ -1,5 +1,5 @@
 <h1>  Create a New Todo.</h1>
 <form action="/todo/new" method="post">
-  <p>What would you like to do? <input type="todo" name="todo" id="todo[todo]" value="todo"></p>
+  <p>What would you like to do? <input type="text" name="content" id="todo[content]" value="todo"></p>
   <input type="submit" value="submit">
 </form>
