--- a/app/views/todos/edit.erb
+++ b/app/views/todos/edit.erb
@@ -1,5 +1,5 @@
 <form  method="POST" action="/todos/<%= @todo.id %>/edit">
   <input type="hidden" name="_method" value="PATCH">
-  <p>Edit to do? <input type="text" name="content" id="todo[content]" value="<%= @todo.content %>"></p>
+  <p>Edit ToDo? <input type="text" name="content" id="todo[content]" value="<%= @todo.content %>"></p>
   <input type="submit" value="submit">
 </form>
