--- a/app/views/todos/index.erb
+++ b/app/views/todos/index.erb
@@ -1,14 +1,24 @@
-<h1>Welcome To <%=@user.username%>'s Todo List </h1>
+
+<h1>Welcome To <%=@user.username%>'s ToDo List </h1>
+
 <%@todos.each do |todo|%>
 </br>
   <p> <%=todo.content%> </p>
   
   <form action="/todos/<%= todo.id %>/edit" method="get" >
-  <input type="submit" value="Edit Todo">
-</Form>
+    <input type="submit" value="Edit Todo">
+  </Form>
+  
+  <form action="/todos/<%= todo.id %>/delete" method="post" >
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delet ToDo">
+  </Form>
 <br>
 <%end%>
 
 <form action="/todos/new" method="get">
   <input type="submit" value="Create New Todo">
+</Form>
+<form action="/users/logout" method="get">
+  <input type="submit" value="LogOut">
 </Form>
