--- a/app/views/todos/new.erb
+++ b/app/views/todos/new.erb
@@ -1,4 +1,4 @@
-<h1>  Create a New Todo.</h1>
+<h1>  Create a New ToDo.</h1>
 <form action="/todo/new" method="post">
   <p>What would you like to do? <input type="text" name="content" id="todo[content]" value="todo"></p>
   <input type="submit" value="submit">
