--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,3 @@
-   <h1>Welcome To <%=@user.username%>'s Todo's </h1>
+   <h1>Welcome To <%=@user.username%>'s ToDo's </h1>
 Here you will show the information about the User as well as the todos associated with the user
  <%# <% @user.todos.each {|todo| } %>
